add facts API for valid date combinations
