# src/v1-api/api.yaml
@@ -97,6 +97,26 @@ paths:
         '500':
           $ref: "#/components/responses/InternalServerError"
 
+  /date/{when}:
+    get:
+      operationId: getDateFactForPeriod
+      summary: Get a date fact for a period in time
+      tags: 
+        - Facts
+      parameters:
+        - $ref: "#/components/parameters/DateParam"
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/DateResponse"
+        '400':
+          $ref: "#/components/responses/BadRequest"
+        '500':
+          $ref: "#/components/responses/InternalServerError"
+
 components:
   parameters:
     NumParam:
@@ -109,13 +129,35 @@ components:
       example: 42
 
     DateParam:
-      name: dt
+      name: when
       in: path
       required: true
       schema:
         $ref: "#/components/schemas/DateQuery"
-      description: The month and combination (as month-day) to search for
-      example: 01-20
+      description: |
+        The month-day combination or year to search for. Valid usage includes:
+        - 01-20 (January 20th)
+        - 12-31 (December 31st)
+        - 2001 (Year 2001)
+        - 1999 (Year 1999)
+
+        Some invalid usage includes:  
+        - 01-2001 (January 2001st)
+        13-01 (invalid month)
+        01-32 (invalid day)
+        2100 (year out of range)
+        999 (incomplete year)
+
+        For optimal results, ensure using a valid month-day or year value as the 
+        in-built validation might still not catch all invalid dates like 02-31 (a.k.a Feb, 31st).
+
+      examples:
+        month-day: 
+          value: 01-20
+          summary: Search for date facts around the 20th of January
+        year:
+          value: 2001
+          summary: Search for date facts around the year 2001
 
   
   schemas:
@@ -128,8 +170,7 @@ components:
 
     DateQuery:
       type: string
-      pattern: "[0-9]{1,2}-[0-9]{1,2}"
-      example: 01-20
+      pattern: ^(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|[12][0-9]|3[01])|(?:19|20)\d{2})$
 
     GameType:
       type: string
